--- a/src/App.css
+++ b/src/App.css
@@ -36,3 +36,24 @@
     transform: rotate(360deg);
   }
 }
+
+
+.bg-modal{
+  width: 100%
+  ;
+  height: 100%;
+  background-color: rgba(0,0,0,0.7);
+  position: absolute;
+  top: 0;
+display: flex;
+justify-content: center;
+align-items: center;
+
+
+}
+.modal-content{
+  width: 500px;
+  height: 300px;
+  background-color: white;
+  border-radius: 5px;
+}
